# ziran2019

./: CMakeLists.txt  LICENSE  README.md  replicability_instructions.htm
Data/: .gitignore
Data/LevelSets/: bullet.vdb
Data/ModelsGen/: README
Lib/: CMakeLists.txt
Lib/MPM/: CMakeLists.txt  MpmGrid.h  MpmInitializationHelper.h  MpmParticleHandleBase.cpp  MpmParticleHandleBase.h  MpmSimulationBase.cpp  MpmSimulationBase.h  MpmSimulationDataAnalysis.h
Lib/MPM/Force/: FBasedMpmForceHelper.cpp  FBasedMpmForceHelper.h  FElasticNonequilibratedBasedMpmForceHelper.h  MpmForceBase.cpp  MpmForceBase.h  MpmForceHelperBase.h
Lib/MPM/Forward/: MpmForward.h
Lib/MPM/instantiations/: FBasedMpmForceHelper2d.cpp  FBasedMpmForceHelper2f.cpp  FBasedMpmForceHelper3d.cpp  FBasedMpmForceHelper3f.cpp  MpmForce2d.cpp  MpmForce2f.cpp  MpmForce3d.cpp  MpmForce3f.cpp  MpmParticlesHandle2d.cpp  MpmParticlesHandle2f.cpp  MpmParticlesHandle3d.cpp  MpmParticlesHandle3f.cpp  MpmSimulation2d.cpp  MpmSimulation2f.cpp  MpmSimulation3d.cpp  MpmSimulation3f.cpp
Lib/SPGrid/: CMakeLists.txt
Lib/SPGrid/Core/: SPGrid_Allocator.h  SPGrid_Allocator_Base.h  SPGrid_Array.h  SPGrid_Geometry.cpp  SPGrid_Geometry.h  SPGrid_Mask.h  SPGrid_Page_Map.h  SPGrid_Set.h  SPGrid_Utilities.cpp  SPGrid_Utilities.h
Lib/Ziran/: CMakeLists.txt
Lib/Ziran/CS/DataStructure/: Box.cpp  Box.h  DataArray.h  DataArrayBase.cpp  DataArrayBase.h  DataManager.h  DataManagerView.h  DisjointRanges.h  DisjointSets.h  Hash.h  HashTable.h  KdTree.cpp  KdTree.h  MultiArray.h  PriorityQueue.h  Ref.h  SpatialHash.h
Lib/Ziran/CS/Util/: Active.cpp  Active.h  AttributeNamesForward.h  BinaryIO.h  CommandLineFlags.h  DataDir.h.in  Debug.h  ErrorContext.cpp  ErrorContext.h  Factory.h  Filesystem.h  FloatingPointExceptions.cpp  FloatingPointExceptions.h  FlopCount.h  Forward.h  Logging.cpp  Logging.h  Meta.h  PlatformSpecific.h  Plugin.h  PluginManager.cpp  PluginManager.h  PrettyPrinting.cpp  PrettyPrinting.h  RandomNumber.cpp  RandomNumber.h  SharedLibrary.cpp  SharedLibrary.h  SharedQueue.h  SignalHandler.cpp  SignalHandler.h  Signals.cpp  Signals.h  StackTrace.cpp  StackTrace.h  StaticIf.h  Strings.h  Timer.cpp  Timer.h
Lib/Ziran/Math/: MathTools.h  SphKernels.h  Statistics.cpp  Statistics.h
Lib/Ziran/Math/Geometry/: AnalyticLevelSet.cpp  AnalyticLevelSet.h  BinaryCurveCollectionIO.cpp  BinaryCurveCollectionIO.h  CollisionObject.cpp  CollisionObject.h  CurveFinder.cpp  CurveFinder.h  ElementManager.h  ElementManagerFor.h  Elements.h  Grid.cpp  Grid.h  MeshConstruction.cpp  MeshConstruction.h  ObjIO.cpp  ObjIO.h  OutputPolyMesh.h  Particles.h  PartioIO.h  PoissonDisk.h  PolyIO.cpp  PolyIO.h  RandomSampling.h  Rotation.h  Segment.cpp  Segment.h  SimplexElements.cpp  SimplexElements.h  SimplexMesh.cpp  SimplexMesh.h  SourceCollisionObject.cpp  SourceCollisionObject.h  TetGenIO.cpp  TetGenIO.h  Tetrahedron.cpp  Tetrahedron.h  Triangle.cpp  Triangle.h  UrjcKnitDataIO.cpp  (+11 more)
Lib/Ziran/Math/Linear/: ConjugateGradient.h  Decomposition.h  DenseExt.h  EigenBuiltinJacobiSVD.h  EigenSparseLU.cpp  EigenSparseLU.h  GeneralizedMinimalResidual.h  Givens.h  GivensQR.h  ImplicitQRSVD.h  KrylovSolvers.h  LinearSolver.h  Minres.h
Lib/Ziran/Math/Nonlinear/: AutoDiff.h  NewtonsMethod.h
Lib/Ziran/Math/Splines/: BSplines.h
Lib/Ziran/Physics/: PlasticityApplier.cpp  PlasticityApplier.h  SimplexMeshPoisson.h  SoundSpeedCfl.h
Lib/Ziran/Physics/ConstitutiveModel/: ConstitutiveModel.h  HyperelasticConstitutiveModel.h  NeoHookeanBorden.cpp  NeoHookeanBorden.h  StvkWithHencky.cpp  StvkWithHencky.h  StvkWithHenckyIsotropic.h  SvdBasedIsotropicHelper.h
Lib/Ziran/Physics/LagrangianForce/: Inertia.cpp  Inertia.h  LagrangianForce.h
Lib/Ziran/Sim/: BackwardEuler.h  DiffTest.h  MeshHandle.cpp  MeshHandle.h  Scene.h  SceneInitializationCore.h  SimulationBase.h  TimeStepping.h
Projects/: CMakeLists.txt
Projects/admm/: .gitignore  AdmmFormula.h  AdmmInit.h  AdmmInit2D.h  AdmmInit3D.h  AdmmSimulation.h  AdmmSimulationFoam.h  AdmmSketch.h  CMakeLists.txt  ConjugateGradient.h  GlobalSystem.h  main.cpp
Projects/fracture/: .gitignore  CMakeLists.txt  ConjugateGradient.h  FractureInit.h  FractureInit2D.h  FractureInit3D.h  FractureSimulation.h  PhaseField.h  PhaseFieldSystem.h  fracture.cpp  fractureBatch.py
Projects/mpm/: .gitignore  CMakeLists.txt  MpmInit.h  MpmInit2D.h  MpmInit3D.h  MpmSimulation.h  batch.py  genVideo.py  mpm.cpp  mpm_tests.cpp  render.py
Scripts/: Makefile.in  gen-instantiations.pl  git-cmake-format.py  test_coverage.sh
